Add external (service) package in infrastructure layer with petstore example
